--- a/app/src/main/res/menu/menu_usuarios.xml
+++ b/app/src/main/res/menu/menu_usuarios.xml
@@ -3,14 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.gtsti.estudo.DashBoardActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_editar"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_editar"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_usuario"
+        android:id="@+id/action_deletar"
         android:orderInCategory="100"
-        android:title="@string/action_usuarios"
+        android:title="@string/action_deletar"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_permissoes"
+        android:orderInCategory="100"
+        android:title="@string/action_permissoes"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_relatorios"
