--- a/app/src/main/res/layout/cad_pedido.xml
+++ b/app/src/main/res/layout/cad_pedido.xml
@@ -65,11 +65,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Data cobrança"/>
-    <EditText
+    <Button
         android:id="@+id/ped_datacobranca"
-        android:layout_width="140dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:inputType="date"/>
+        android:text="Selecione a Data"
+        android:onClick="selecionarData"/>
 
     <TextView
         android:layout_width="wrap_content"
